# gpu-rental-mcp

./: .gitignore  README.md  package-lock.json  package.json
app/: .env.example  BAND_SDK_REFERENCE.md  agent_config.yaml.example  demo_trigger.py  kickoff.py  pyproject.toml  run_all.py  spike_connect.py
app/dashboard/: app.js  index.html  style.css
app/tests/: test_agent_turn.py  test_detector.py  test_mockops.py  test_scenarios.py  test_server.py  test_tools.py
app/warroom/: agent_main.py  band_io.py  bridge.py  detector.py  detector_main.py  mockops.py  postmortem.py  roles.py  scenarios.py  server.py  tools.py
docs/: DEMO_SCRIPT.md  SUBMISSION.md  gpu-rental-mcp.md  make_slides.py  submission-fields.md
docs/superpowers/plans/: 2026-06-12-war-room.md
docs/superpowers/specs/: 2026-06-12-war-room-design.md
src/: index.ts  shadeform.ts
