[project]
name = "warroom"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "band-sdk[anthropic]",
    "anthropic>=0.40",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
